<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/brown_light"
  android:orientation="vertical"
  tools:context=".activities.MainActivity">

  <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/subtitle"
    android:layout_centerHorizontal="true"
    android:fontFamily="@font/comfortaa_bold"
    android:text="@string/costs_activity_title"
    android:textColor="@color/white"
    android:textSize="36sp" />

  <TextView
    android:id="@+id/subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/card"
    android:layout_centerHorizontal="true"
    android:fontFamily="@font/comfortaa_bold"
    android:text="@string/costs_activity_subtitle"
    android:textAlignment="center"
    android:textColor="@color/brown_dark" />

  <RelativeLayout
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:layout_alignParentBottom="true"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="-8dp"
    android:background="@drawable/default_radius">

    <TextView
      android:id="@+id/costs_description_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignStart="@+id/input_description"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/comfortaa_regular"
      android:text="@string/costs_activity_cost_description"
      android:textColor="@color/black"
      android:textSize="14sp" />

    <EditText
      android:id="@+id/input_description"
      android:layout_width="match_parent"
      android:layout_height="65dp"
      android:layout_below="@+id/costs_description_label"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:background="@drawable/input_blue_focus"
      android:fontFamily="@font/comfortaa_regular"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:singleLine="true"
      android:textCursorDrawable="@color/black" />

    <TextView
      android:id="@+id/costs_price_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/input_description"
      android:layout_alignStart="@+id/input_price"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/comfortaa_regular"
      android:text="@string/costs_activity_cost_price"
      android:textColor="@color/black"
      android:textSize="14sp" />

    <EditText
      android:id="@+id/input_price"
      android:layout_width="180dp"
      android:layout_height="65dp"
      android:layout_below="@+id/costs_price_label"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:background="@drawable/input_blue_focus"
      android:fontFamily="@font/comfortaa_regular"
      android:inputType="number"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:singleLine="true"
      android:textCursorDrawable="@color/black" />

    <Button
      android:id="@+id/button_cost"
      android:layout_width="match_parent"
      android:layout_height="65dp"
      android:layout_below="@+id/input_price"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="25dp"
      android:layout_marginBottom="5dp"
      android:background="@drawable/button_filled_brown"
      android:fontFamily="@font/comfortaa_bold"
      android:text="@string/costs_activity_cost_add"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="16sp" />

    <View
      android:id="@+id/separator"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/button_cost"
      android:layout_marginHorizontal="25dp"
      android:layout_marginVertical="20dp"
      android:background="@color/light_gray" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/list"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/separator"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="10dp"
      tools:listitem="@layout/activity_costs_list_item"></androidx.recyclerview.widget.RecyclerView>

  </RelativeLayout>


</RelativeLayout>